Fixed some of <story-edit-view>'s CSS.
Now, the background grid should be properly aligned again. Also, passage squares with the 'start' border are no longer larger than other passages, thus misaligning them on the grid (and mispositioning their link arrow connectors).

--- a/src/story-edit-view/index.less
+++ b/src/story-edit-view/index.less
@@ -1,5 +1,5 @@
 #storyEditView .passages {
-	background: #24497e url("img/blueprint-large.png") 10px -15px;
+	background: #24497e url("img/blueprint-large.png") 1px -23px;
 	width: 100%;
 	height: 100%;
 	user-select: none;
@@ -10,12 +10,12 @@
 
 #storyEditView.zoom-small .passages {
 	background-image: url('img/blueprint-small.png');
-	background-position: -15px 10px;
+	background-position: 0px 0px;
 }
 
 #storyEditView.zoom-medium .passages {
 	background-image: url('img/blueprint-medium.png');
-	background-position: 10px 10px;
+	background-position: 0px 0px;
 }
 
 
